container padding, header size changes due to mobile visibility issues

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,5 +1,5 @@
 .header {
-  padding: 1rem 0 3rem 0;
+  padding: 1rem 0 2rem 0;
   //position: sticky;
   top: 0;
   width: 100%;
@@ -21,7 +21,7 @@ a {
 
 .title {
   //font-size: 3rem;
-  font-size: 11vw;
+  font-size: 10vw;
   text-decoration: none;
   /*color: #0d40fd;*/
   //color:var(--textTitle);
